<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:paddingLeft="@dimen/left"
    android:paddingRight="@dimen/right"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/titulos"
        >
        <TextView
            android:id="@+id/tvNombre"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/nombreC"
            android:textSize="@dimen/titulos"
            android:paddingRight="@dimen/right"
            />
        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titulos"
            android:paddingLeft="@dimen/left"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/top"
        >
        <TextView
            android:id="@+id/tvFecha"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/fecha"
            android:textSize="@dimen/titulos">
        </TextView>

    </LinearLayout>
    <DatePicker
        android:id="@+id/dpMyPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
    </DatePicker>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvCel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cellPhone"
            android:paddingTop="@dimen/top"
            android:textSize="@dimen/titulos"
            android:paddingRight="@dimen/right"
            >
        </TextView>
        <EditText
            android:id="@+id/etCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/left"
            android:textSize="@dimen/titulos"
            >
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:paddingTop="@dimen/top"
            android:textSize="@dimen/titulos"
            android:paddingRight="@dimen/right"
            >
        </TextView>
        <EditText
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/left"
            android:textSize="@dimen/titulos"
            >
        </EditText>
    </LinearLayout>
    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="@dimen/titulos"
        >
    </EditText>
    <Button
        android:id="@+id/btNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_gravity="center"
        android:onClick="nextPage"
        >
    </Button>
</androidx.appcompat.widget.LinearLayoutCompat>